Fix contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -67,8 +67,9 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   grid-template-areas: "banner";
-  color: #fff;
+  color: white;
   font-size: 1.5rem;
+  background-color: #522806;
 }
 
 .banner img {
